<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="title_appbar">Filters</string>
    <string name="title_filter_premium_lock">잠금은 어떻게 푸나요?</string>

    <string name="category_filter_sort_popular">이름순</string>
    <string name="category_filter_sort_latest">멤버십 낮은순</string>
    <string name="category_filter_sort_review">퓨어지수 높은순</string>
    <string name="category_filter_keyword_all">전체</string>
    <string name="category_filter_keyword_spring">화사한 봄날</string>
    <string name="category_filter_keyword_summer">여름</string>
    <string name="category_filter_keyword_fall">가을 풍경</string>
    <string name="category_filter_keyword_winter">겨울눈</string>
    <string name="category_filter_keyword_backlight">역광에서</string>
    <string name="category_filter_keyword_night">night</string>
    <string name="category_filter_keyword_daily">daily</string>
    <string name="category_filter_keyword_cat">고양이</string>

    <string-array name="category_filter_keyword">
        <item></item>
        <item>spring</item>
        <item>summer</item>
        <item>fall</item>
        <item>winter</item>
        <item>backlight</item>
        <item>night</item>
        <item>daily</item>
        <item>cat</item>
    </string-array>

    <string name="content_filter_artist">Made by %s</string>
    <string name="content_filter_premium_lock">필터를 사용해보고 후기를 남기면 스탬프가 찍히고,\n일정 개수를 모으면 프리미엄 필터를 열람할 수 있어요.</string>
    <string name="content_filter_premium_lock_description_start">스탬프&#160;</string>
    <string name="content_filter_premium_lock_description_end">&#160;쌓이면 볼 수 있어요</string>
    <string name="content_filter_premium_lock_description">4개 이상</string>
    <string name="content_filter_premium_plus_lock_description">8개 이상</string>
    <string name="content_premium_filter">Premium Filter</string>
    <string name="content_premium_plus_filter">Premium+ Filter</string>
    <string name="content_premium_filter_stamp">누적 스탬프 4개 +</string>
    <string name="content_premium_plus_filter_stamp">누적 스탬프 8개 +</string>
    <string name="content_confirm">확인</string>
    <string name="content_item_empty">아직 준비중이에요</string>

</resources>