<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_grey100_bottom_sheet_dialog"
        android:paddingHorizontal="@dimen/margin_screen_side">

        <ImageView
            android:id="@+id/img_top"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp"
            android:src="@drawable/ic_bottom_sheet_dialog_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/kr_title_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_screen_side"
            android:text="@string/title_mypage_premium_lock"
            android:textColor="@color/grey_500"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_top" />

        <TextView
            android:id="@+id/tv_description"
            style="@style/kr_body_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/content_filter_premium_lock"
            android:textColor="@color/grey_500"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_badge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_screen_side"
            android:background="@drawable/shape_white_round_background"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_description">

            <ImageView
                android:id="@+id/img_premium_badge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_premium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_premium_title"
                style="@style/kr_body_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/content_premium_filter"
                android:textColor="@color/blue_400"
                app:layout_constraintBottom_toTopOf="@id/layout_premium"
                app:layout_constraintStart_toEndOf="@id/img_premium_badge"
                app:layout_constraintTop_toTopOf="@id/img_premium_badge"
                app:layout_constraintVertical_chainStyle="packed" />

            <LinearLayout
                android:id="@+id/layout_premium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@id/img_premium_badge"
                app:layout_constraintEnd_toEndOf="@id/tv_premium_title"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/tv_premium_title"
                app:layout_constraintTop_toBottomOf="@id/tv_premium_title">

                <TextView
                    style="@style/kr_body_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/content_filter_premium_lock_description_start"
                    android:textColor="@color/grey_300" />

                <TextView
                    style="@style/kr_body_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/content_filter_premium_lock_description"
                    android:textColor="@color/blue_400" />

                <TextView
                    style="@style/kr_body_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/content_filter_premium_lock_description_end"
                    android:textColor="@color/grey_300" />

            </LinearLayout>

            <ImageView
                android:id="@+id/img_premium_plus_badge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_screen_side"
                android:src="@drawable/ic_premium_plus"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_premium_badge" />

            <TextView
                android:id="@+id/tv_premium_plus_title"
                style="@style/kr_body_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/content_premium_plus_filter"
                android:textColor="@color/purple_500"
                app:layout_constraintBottom_toTopOf="@id/layout_premium_plus"
                app:layout_constraintStart_toEndOf="@id/img_premium_plus_badge"
                app:layout_constraintTop_toTopOf="@id/img_premium_plus_badge"
                app:layout_constraintVertical_chainStyle="packed" />

            <LinearLayout
                android:id="@+id/layout_premium_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@id/img_premium_plus_badge"
                app:layout_constraintEnd_toEndOf="@id/tv_premium_plus_title"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/tv_premium_plus_title"
                app:layout_constraintTop_toBottomOf="@id/tv_premium_plus_title">

                <TextView
                    style="@style/kr_body_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/content_filter_premium_lock_description_start"
                    android:textColor="@color/grey_300" />

                <TextView
                    style="@style/kr_body_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/content_filter_premium_plus_lock_description"
                    android:textColor="@color/purple_500" />

                <TextView
                    style="@style/kr_body_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/content_filter_premium_lock_description_end"
                    android:textColor="@color/grey_300" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_confirm"
            style="@style/kr_body_3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_bottom_button"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="@dimen/margin_bottom_button_bottom"
            android:background="@drawable/shape_button_solid_primary_lg"
            android:gravity="center"
            android:paddingVertical="18dp"
            android:text="@string/content_confirm"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_badge" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>